[package]
name = "srv-sub-fill"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tower-http = { version = "0.6", features = ["trace"] }
anyhow = "1.0"